Refine Amass role

--- a/locales/en/resume.json
+++ b/locales/en/resume.json
@@ -41,7 +41,7 @@
 						"text": "Amass Media",
 						"url": "http://amassmedia.org"
 					},
-					", Advisor"
+          ", Product/Technical Advisor"
 				],
 				"right": [
 					"San Francisco, CA: Mar ’15 – Current"
