--- a/locales/en/work_projects.json
+++ b/locales/en/work_projects.json
@@ -33,7 +33,7 @@
 			"stack": "Rails, AngularJS, Haml, Foundation + Sass, MongoDB",
 			"positions": [
 				{
-					"title": "Advisor",
+          "title": "Product/Technical Advisor",
 					"start": "Mar ’14",
 					"end": "Current"
 				}
