Modify todo-app text

--- a/locales/en/side_projects.json
+++ b/locales/en/side_projects.json
@@ -127,9 +127,15 @@
                 }]
               ],
               [
-                ["Django (app not finished yet)"],
+                ["Django (app in progress)"],
                 [{
                   "url": "https://github.com/golmansax/todo-app-in-django"
+                }]
+              ],
+              [
+                ["React Native iOS (app in progress)"],
+                [{
+                  "url": "https://github.com/golmansax/todo-app-in-react-native"
                 }]
               ]
             ]
