--- a/locales/en/work_projects.json
+++ b/locales/en/work_projects.json
@@ -40,7 +40,7 @@
 			],
 			"involvedWith": [
 				["Work directly with the founders on product strategy"],
-				["Design and coded the landing site"],
+				["Design and code the landing site"],
 				["Conduct product and technical interviews"]
       ]
     },
