--- a/locales/en/side_projects.json
+++ b/locales/en/side_projects.json
@@ -33,7 +33,7 @@
       "name": "Office Street View",
       "createdFor": "Internal Room 77 hackathon",
       "description": "Navigate through an office and meet the employees!",
-      "stack": "AngularJS, Sass, PHP",
+      "stack": "Angular.js, Sass, PHP",
       "github": "https://github.com/golmansax/office-street-view",
       "images": [
         "/static/office-street-view_1.jpg",
@@ -46,10 +46,21 @@
       "url": "http://golmansax.com",
       "github": "https://github.com/golmansax/my-site-in-express",
       "description": "A portfolio of projects that I have worked on",
-      "stack": "ExpressJS, ES6, ReactJS",
+      "stack": "Express.js, ES6, React.js",
       "images": [
         "/static/personal-site.jpg"
       ]
+    },
+    {
+      "slug": "my-gear",
+      "name": "My Gear",
+      "description": [
+        "A simple site used to track my clothing purchases and to help keep ",
+        "me in line with my minimalist philosophies"
+      ],
+      "images": ["/static/my-gear.jpg"],
+      "github": "https://github.com/golmansax/my-gear",
+      "stack": "Rails, React.js + Immutable.js + Flux, Bootstrap + Sass, PostgreSQL"
     },
     {
       "slug": "27-percenters",
@@ -64,7 +75,7 @@
         ["/static/27-percenters_home.jpg", "/static/27-percenters_settings.jpg"]
       ],
       "github": "https://github.com/27percenters/27percenters",
-      "stack": "Ionic, AngularJS, Sass, Firebase, Appetize",
+      "stack": "Ionic, Angular.js, Sass, Firebase, Appetize",
       "involvedWith": [
         ["Front-end coding and design"],
         ["Use AngularFire to bind Firebase to the frontend"]
@@ -79,7 +90,7 @@
         "A social, volunteering platform created to encourage users to ",
         "volunteer, and make it easier to find opportunities"
       ],
-      "stack": "Rails, AngularJS, PostgreSQL",
+      "stack": "Rails, Angular.js, PostgreSQL",
       "involvedWith": [
         ["Front-end coding and design"]
       ]
@@ -115,7 +126,7 @@
             "bullets": [
               [
                 [
-                  "Stack used at Chalk Schools – Rails, Backbone + ReactJS, ",
+                  "Stack used at Chalk Schools – Rails, Backbone + React.js, ",
                   "Haml, Bootstrap + Sass"
                 ],
                 [{
@@ -123,7 +134,7 @@
                 }]
               ],
               [
-                ["Rails, React, Flux, Bootstrap + Sass"],
+                ["Rails, React.js + Flux, Bootstrap + Sass"],
                 [{
                   "url": "https://github.com/golmansax/todo-app-in-rails-flux"
                 }]
