--- a/locales/en/resume.json
+++ b/locales/en/resume.json
@@ -24,7 +24,7 @@
 					"Focus on customer satisfaction through integrating user feedback and fast response times to support requests"
 				],
 				[
-					"Comfortable with full stack of website development, from code architecting to frontend design"
+					"Comfortable with full stack of website development, from code architecting to frontend UI/UX"
 				],
 				[
 					"Joined the team when the company had 3 employees (2 engineers)"
