--- a/locales/en/work_projects.json
+++ b/locales/en/work_projects.json
@@ -18,7 +18,7 @@
 			],
 			"joinedWhen": "Team had 3 employees (2 engineers)",
 			"involvedWith": [
-				["Full stack of website development, from code architecting to frontend design"],
+				["Full stack of website development, from code architecting to frontend UI/UX"],
 				["Help create an engineering culture that values collaboration and a strong testing suite"]
 			]
 		},
