--- a/locales/en/app.json
+++ b/locales/en/app.json
@@ -4,7 +4,7 @@
 			"title": "Resume"
 		},
 		"portfolio": {
-			"description": "Personal site of Holman Gao, full-stack programmer and product person at various startups, University of Maryland and Blair Magnet alum, living in San Francisco",
+			"description": "Personal site of Holman Gao, programmer and product person at various startups, University of Maryland and Blair Magnet alum, living in San Francisco",
 			"title": "Holman Gao"
 		},
 		"hcd": {
