--- a/locales/en/side_projects.json
+++ b/locales/en/side_projects.json
@@ -24,7 +24,14 @@
             "text": "Video"
           },
           " of demo given on stage"
-        ]
+        ],
+				[
+					{
+            "url": "http://www.walmartlabs.com/2015/09/21/walmart-simple-text-takes-first-place-in-wmtcode-hack-at-hackdisrupt/",
+						"text": "Honorable mention"
+					},
+          " for the Walmart Labs sponsor prize"
+				]
       ]
     },
     {
