--- a/locales/en/side_projects.json
+++ b/locales/en/side_projects.json
@@ -122,7 +122,7 @@
       ],
       "images": ["/static/my-gear.jpg"],
       "github": "golmansax/my-gear",
-      "stack": "Rails, React.js + Immutable.js + Flux, Bootstrap + Sass, PostgreSQL"
+      "stack": "Rails, React.js + Immutable.js + Flux, Bootstrap + Sass, GraphQL, PostgreSQL"
     },
     {
       "slug": "27-percenters",
