Might as well try

--- a/locales/en/work_projects.json
+++ b/locales/en/work_projects.json
@@ -59,6 +59,7 @@
 			"joinedWhen": "Team had 3 employees (2 engineers)",
 			"involvedWith": [
 				["Full stack of website development, from code architecting to frontend UI/UX"],
+				["Spearheaded a database design change which grew sales opportunities 10x"],
 				["Help create an engineering culture that values collaboration and a strong testing suite"]
 			]
 		},
