--- a/locales/en/resume.json
+++ b/locales/en/resume.json
@@ -35,14 +35,12 @@
 				[
 					"Helped create the engineering culture as an early employee"
 				],
+				["Spearheaded a database redesign which significantly opened up sales opportunities"],
 				[
-					"Practice agile development through full code coverage and strong integration tests"
+					"Practiced agile development through full code coverage and strong integration tests"
 				],
 				[
-					"Focus on customer satisfaction through integrating user feedback and fast response times to support requests"
-				],
-				[
-					"Comfortable with full stack of website development, from code architecting to frontend UI/UX"
+					"Full stack of website development, from code architecting to frontend UI/UX"
 				],
 				[
 					"Joined the team when the company had 3 employees (2 engineers)"
