See if gh deploy works!

--- a/locales/en/resume.json
+++ b/locales/en/resume.json
@@ -35,7 +35,7 @@
 				[
 					"Helped create the engineering culture as an early employee"
 				],
-				["Spearheaded a database redesign which significantly opened up sales opportunities"],
+				["Spearheaded a database redesign that significantly opened up sales opportunities"],
 				[
 					"Practiced agile development through full code coverage and strong integration tests"
 				],
