Make amass https

--- a/locales/en/work_projects.json
+++ b/locales/en/work_projects.json
@@ -66,7 +66,7 @@
 		{
       "slug": "amass",
 			"name": "Amass Media",
-			"url": "http://amassmedia.org",
+			"url": "https://amassmedia.org",
 			"images": [
 				"/static/amass.jpg"
 			],
