--- a/locales/en/meta_data.json
+++ b/locales/en/meta_data.json
@@ -26,7 +26,7 @@
 			"meta": [
         {
           "name": "description",
-          "content": "Timeline of where I have worked"
+          "content": "Timeline of where I have worked. Currently working as a software engineer at Room 77 and as a product/technical advisor at Amass Media."
         }
       ],
 			"title": "Work"
@@ -44,7 +44,7 @@
 			"meta": [
         {
           "name": "description",
-          "content": "Details on how I try to contribute to the community. Includes volunteering, list of donations, and various projects in the community."
+          "content": "Details on my contributions to the community. Includes volunteering, list of donations, and various projects in the community."
         }
       ],
       "title": "Efforts in Community"
