Update text more

--- a/locales/en/community_projects.json
+++ b/locales/en/community_projects.json
@@ -33,7 +33,7 @@
                   ", Academic Coach"
                 ],
                 "right": [
-                  "San Francisco, CA: Nov ’14 – May ’15"
+                  "San Francisco, CA: Nov ’14 – Current"
                 ]
               },
               {
