--- a/locales/en/resume.json
+++ b/locales/en/resume.json
@@ -245,7 +245,7 @@
 						", Academic Coach"
 					],
 					"right": [
-						"San Francisco, CA: Nov ’14 – May ’15"
+						"San Francisco, CA: Nov ’14 – Current"
 					]
 				},
 				{
