Add simple for boost my club

--- a/locales/en/side_projects.json
+++ b/locales/en/side_projects.json
@@ -158,6 +158,17 @@
       ]
     },
     {
+      "slug": "boost-my-club",
+      "name": "Boost My Club",
+      "images": ["/static/boost-my-club.jpg"],
+      "url": "https://boostmyclub.com",
+      "description": [
+        "A crowdfunding platform designed to increase donations for school ",
+        "clubs"
+      ],
+      "stack": "Express.js, ES6, React.js, CSS Modules"
+    },
+    {
       "slug": "todo-app-project",
       "name": "Todo App Project",
       "description": [
