--- a/locales/en/community_projects.json
+++ b/locales/en/community_projects.json
@@ -27,6 +27,18 @@
               {
                 "left": [
                   {
+                    "text": "Building Diversity in Science",
+                    "url": "http://www.diversityinscience.org/"
+                  },
+                  ", Advisor"
+                ],
+                "right": [
+                  "Daly City, CA: June ’15 – Current"
+                ]
+              },
+              {
+                "left": [
+                  {
                     "text": "First Graduate",
                     "url": "http://firstgraduate.org/"
                   },
