--- a/locales/en/community_projects.json
+++ b/locales/en/community_projects.json
@@ -89,53 +89,23 @@
 				}
       ]
 		},
-		{
-      "slug": "my-donations-pledge",
-			"name": "My Donations Pledge",
+    {
+      "slug": "my-impact-pledge",
+      "name": "My Impact Pledge",
+      "description": "A call to have people pledge to regularly support causes they believe in.",
 			"description": [
-				"After obtaining my undergraduate degree, I made a pledge to donate ",
-				"money every year on my birthday, to support organizations that I feel ",
-				"are making a positive impact. All of the organizations ",
-				"that I have chosen so far are ones that have impacted me directly. ",
-        "This is my way of saying thanks!"
+				"I created this site to document an impact pledge I made after ",
+        "obtaining my undergraduate degree.  Instead of splurging on my ",
+        "birthday, I give a personally significant donation to organizations ",
+        "that I feel are making a positive impact in youth education."
 			],
-			"custom": [
-				{
-					"klass": "Donations",
-					"attrs": {
-						"donations": [
-							{
-								"year": 2016,
-								"organization": {
-									"text": "TBD"
-								}
-							},
-							{
-								"year": 2015,
-								"organization": {
-                  "url": "http://www.mbhsmagnet.org/",
-                  "text": "Montgomery County ARML Team"
-								}
-							},
-							{
-								"year": 2014,
-								"organization": {
-									"url": "https://www.hopechineseschool.org/hcscp/",
-									"text": "Hope Chinese School College Park Campus"
-								}
-							},
-							{
-								"year": 2013,
-								"organization": {
-									"url": "http://www.asia.si.edu/events/imaginasia.asp",
-									"text": "Smithsonian ImaginAsia Family Program"
-								}
-							}
-						]
-					}
-				}
-			]
-		},
+      "url": "https://myimpactpledge.com/pledgers/golmansax",
+      "github": "golmansax/my-impact-pledge",
+      "stack": "Express.js, ES6, React.js, CSS Modules",
+      "images": [
+        "/static/my-impact-pledge.jpg"
+      ]
+    },
 		{
       "slug": "human-centered-design",
 			"name": "Human-Centered Design",
