Update boost my club url

--- a/locales/en/side_projects.json
+++ b/locales/en/side_projects.json
@@ -150,7 +150,7 @@
       "slug": "boost-my-club",
       "name": "Boost My Club",
       "images": ["/static/boost-my-club.jpg"],
-      "url": "https://boostmyclub.com",
+      "url": "https://www.boostmyclub.com",
       "description": [
         "A crowdfunding platform designed to increase donations for school ",
         "clubs"
