--- a/locales/en/work_projects.json
+++ b/locales/en/work_projects.json
@@ -84,6 +84,23 @@
 				["Design and code the landing site"],
 				["Conduct product and technical interviews"]
       ]
+    },
+    {
+      "slug": "boost-my-club",
+      "name": "Boost My Club",
+      "images": ["/static/boost-my-club.jpg"],
+      "url": "https://www.boostmyclub.com",
+			"positions": [
+				{
+					"title": "Co-founder",
+					"start": "Nov ’15",
+					"end": "Current"
+				}
+			],
+      "description": [
+        "A fundraising platform for school clubs"
+      ],
+      "stack": "Rails, Express.js, ES6, React.js, CSS Modules"
     }
 	]
 }
